@@ -82,6 +82,7 @@ Any correction, hardening pass, or follow-up change is recorded in a newer chang
 - Library view-state persistence now writes `baseline.txt`, `latest.txt`, `blocked.txt`, and `view_state.json` with staged atomic finalize semantics, and returns explicit fail-closed write error codes on library-state write/clear failures.
 - Watch trigger output now stages/finalizes `watch_trigger.txt` atomically and cleans `.stage` residue on write failure.
 - `run` operator receipts now include deterministic entry coverage for mint/decision/disclosure/appeal/readme artifacts and perform evidence presence/digest/orphan checks before finalize summary output.
+- Safe-run/container evidence verification now treats `*_receipt.json` artifacts as presence-only evidence links (not raw file-digest comparisons), removing false `SAFE_RUN_EVIDENCE_DIGEST_MISMATCH` warnings in nominal flows.
 - Ticket-pack contract tests now pin report-state parsing from `report_card_v0.json` and enforce digest-line format (`sha256:<64hex>`) for ticket summary identity fields.
 - Ticket-pack contract tests now also pin text fallback parsing from `report_card.txt` (`STATUS/BASELINE/LATEST/BUCKETS` and key-value lines) when structured report JSON is absent.
 - Windows shell report card outputs now surface adapter evidence directly:
