@@ -300,6 +300,7 @@ Included
 - Library view-state persistence now writes `baseline.txt`, `latest.txt`, `blocked.txt`, and `view_state.json` with staged atomic finalize semantics, and returns explicit fail-closed write error codes on library-state write/clear failures.
 - Watch trigger output now stages/finalizes `watch_trigger.txt` atomically and cleans `.stage` residue on write failure.
 - `run` operator receipts now include deterministic entry coverage for mint/decision/disclosure/appeal/readme artifacts and perform evidence presence/digest/orphan checks before finalize summary output.
+- Safe-run/container evidence verification now treats `*_receipt.json` artifacts as presence-only evidence links (not raw file-digest comparisons), removing false `SAFE_RUN_EVIDENCE_DIGEST_MISMATCH` warnings in nominal flows.
 - Ticket-pack contract coverage now enforces report-state extraction from `report_card_v0.json` and validates digest identity line format (`sha256:<64hex>`) in `ticket_summary.txt`.
 - Ticket-pack contract coverage now also enforces text fallback parsing from `report_card.txt` (`STATUS/BASELINE/LATEST/BUCKETS` plus key-value lines) when structured report JSON is absent.
 - Windows shell `report_card.txt` and `report_card_v0.json` now include adapter metadata and capability counts when adapter evidence exists:
